# audio-systray

./: .gitignore  CMakeLists.txt  build.sh  flake.nix  handle_events.c  handle_events.cpp  handle_events.h  main.c  main.cpp  menu.c  menu.cpp  menu.h  notify.c  notify.h  playerctl.c  playerctl.h  pulse.c  pulse.h  pulse_actions.c  pulse_actions.h  pulse_audio.c  pulse_audio.cpp  pulse_audio.h  pulse_audio_actions.c  pulse_audio_actions.cpp  pulse_audio_actions.h  sink_list.c  sink_list.h  status_icon.c  status_icon.cpp  status_icon.h  utils.c  utils.h  volume.c  volume.h  x11_keygrab.c  x11_keygrab.h
